[package]
name = "slaballoc"
version = "0.1.0"
edition = "2018"
authors = ["Justin Moore <me@justinm.one>"]

description = "Safe and lockless fixed-size memory allocator for `no_std` systems"
keywords = ["no_std", "allocator", "kernel", "slab", "lock-free"]
repository = "https://github.com/DrChat/slaballoc"
license = "Apache-2.0/MIT"
readme = "README.md"

[dependencies]
